{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 195,
  "lineage": "a62f17b0-0c5e-44fd-feba-242439f06b8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:976859928792:instance/i-07578ddcef2fcd71d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07578ddcef2fcd71d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0963da3d60e5b23c8",
            "private_dns": "ip-10-10-0-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.133",
            "public_ip": "3.90.241.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d694f00cba0713c4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5179412529403d3",
            "tags": {
              "Name": "apache-cerverus-dev-virginia",
              "schedule": "enable"
            },
            "tags_all": {
              "Name": "apache-cerverus-dev-virginia",
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia",
              "schedule": "enable"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b10f9758b712ddd"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": "mysql",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:976859928792:instance/i-0effe35ac5ee4fe68",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0effe35ac5ee4fe68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00107f40b0a6316d4",
            "private_dns": "ip-10-10-0-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.71",
            "public_ip": "54.198.49.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fc681b3fcd03923c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5179412529403d3",
            "tags": {
              "Name": "mysql-cerverus-dev-virginia",
              "schedule": "enable"
            },
            "tags_all": {
              "Name": "mysql-cerverus-dev-virginia",
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia",
              "schedule": "enable"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b10f9758b712ddd"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:internet-gateway/igw-0a409b4034fc1da88",
            "id": "igw-0a409b4034fc1da88",
            "owner_id": "976859928792",
            "tags": {
              "Name": "igw_internet_gateway-cerverus-dev-virginia"
            },
            "tags_all": {
              "Name": "igw_internet_gateway-cerverus-dev-virginia",
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0efd4f7511e0218ed"
          },
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:route-table/rtb-0b2b815c674d88a00",
            "id": "rtb-0b2b815c674d88a00",
            "owner_id": "976859928792",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a409b4034fc1da88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_crt-cerverus-dev-virginia"
            },
            "tags_all": {
              "Name": "public_crt-cerverus-dev-virginia",
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efd4f7511e0218ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e3278e41d6d8cd4",
            "route_table_id": "rtb-0b2b815c674d88a00",
            "subnet_id": "subnet-0e5179412529403d3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:security-group/sg-07b10f9758b712ddd",
            "description": "Allow SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b10f9758b712ddd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "976859928792",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efd4f7511e0218ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:subnet/subnet-0c80b80b6851bcc17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c80b80b6851bcc17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "976859928792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-cerverus-dev-virginia"
            },
            "tags_all": {
              "Name": "private_subnet-cerverus-dev-virginia",
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0efd4f7511e0218ed"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:subnet/subnet-0e5179412529403d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5179412529403d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "976859928792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-cerverus-dev-virginia"
            },
            "tags_all": {
              "Name": "public_subnet-cerverus-dev-virginia",
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0efd4f7511e0218ed"
          },
          "dependencies": [
            "aws_vpc.vpc-virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:976859928792:vpc/vpc-0efd4f7511e0218ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-060b2d97f3326b005",
            "default_route_table_id": "rtb-07a59b1b973fa9ba9",
            "default_security_group_id": "sg-074da8b1190b147b9",
            "dhcp_options_id": "dopt-0a58c513d3a09e3a7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efd4f7511e0218ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a59b1b973fa9ba9",
            "owner_id": "976859928792",
            "tags": {
              "Name": "vpc_virginia-cerverus-dev-virginia"
            },
            "tags_all": {
              "Name": "vpc_virginia-cerverus-dev-virginia",
              "env": "dev",
              "iac": "Terraform",
              "owner": "Sebastian",
              "project": "cerverus",
              "region": "virginia"
            }
          }
        }
      ]
    }
  ]
}